boinc (7.16.6+dfsg-1exp2) experimental; urgency=medium

  * Also building static libraries - to help providing truly static scientific
    apps across platforms.
  * d/rules: clean is undoing uncommitted changes done to d/control
  * boinc-server-maker: provide arch-dep links instead of examples' executables
                        in /usr/share/doc

 -- Steffen Moeller <moeller@debian.org>  Sat, 02 May 2020 14:21:51 +0200

boinc (7.16.6+dfsg-1exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sun, 19 Apr 2020 17:09:16 +0200

boinc (7.16.6+dfsg-1) unstable; urgency=medium

  * New upstream version 7.16.6+dfsg
  * Refresh patches

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sun, 19 Apr 2020 17:07:33 +0200

boinc (7.16.5+dfsg-1exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 27 Feb 2020 15:33:53 +0100

boinc (7.16.5+dfsg-1) unstable; urgency=medium

  * New upstream version 7.16.5+dfsg
  * Upload to unstable
  * Update copyright years

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 27 Feb 2020 15:32:39 +0100

boinc (7.16.4+dfsg-1exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sat, 25 Jan 2020 15:34:18 +0100

boinc (7.16.4+dfsg-1) unstable; urgency=medium

  * New upstream version 7.16.4+dfsg
  * Bump copyright years
  * drop upstream patches:
    - some_extra_clang_warnings.patch
    - more_clang_warnings.patch
  * Refresh patches
  * Bump std-version to 4.5.0, no changes required
  * Upload to unstable

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sat, 25 Jan 2020 15:28:00 +0100

boinc (7.16.3+dfsg-1exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.